# visvalingam_simplify

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/bundle/: CMakeLists.txt
src/: csv.cpp  csv.h  geo_types.cpp  geo_types.h  heap.hpp  main.cpp  ogr.cpp  ogr.h  polyline.cpp  polyline.h  test_visvalingam.cpp  visvalingam_algorithm.cpp  visvalingam_algorithm.h
